@@ -26,7 +26,7 @@ $I->fillField( 'Comments', 'Comments text' );
 $I->scrollTo( [ 'css' => 'input[type=submit]' ] );
 // Close the date pickers
 $I->executeJS( 'return jQuery("input[type=submit]").focus()' );
-$I->click( 'input[type=submit]' );
+$I->click( 'Submit' );
 $I->waitForText( 'Thanks for contacting us' );
 
 // Login to wp-admin
