@@ -15,7 +15,7 @@ $I->amOnPage( '/0021-hs4878-user-input-section-logic' );
 $I->see( '0021 HS4878 User Input Section Logic' );
 $I->scrollTo( [ 'css' => '.gform_title' ], 20, 50 ); // needed for chromedriver
 $I->checkOption( 'input[name=input_1\\.2]' );
-$I->click( 'input[type=submit]' );
+$I->click( 'Submit' );
 $I->waitForText( 'Thanks for contacting us! We will get in touch with you shortly.', 3 );
 
 // Login to wp-admin
