@@ -6,3 +6,4 @@
 - Fixed a PHP notice which can occur when conditional logic is evaluated and the rule is not based on a form field.
 - Fixed an issue where workflow merge tags would not be available in the merge tag dropdown for notification content fields in certain steps.
 - Updated the Members integration to include the missing Status page Admin Actions capability.
+- Updated some acceptance tests to make them work with WordPress 5.3 and the TwentyTwenty default theme.
